Version 0.10.4 (2011/01/26)

  * CMakeLists.txt, cvBlobConfig.cmake.in: create "cvBlobConfig.cmake" for
  easy integration with CMAKE projects. Thanks to zorzalzilba.

Version 0.10.3 (2010/11/12)

  * cvlabel.cpp: a little optimization in "cvLabel".

  * cvblob.cpp, cvlabel, cvblob.h: optimization of central moments
  calculation. Deleted: "cvCentralMoments" function and
  "centralMoments" member of CvBlob type.

  * cvblob.cpp, cvblob.h: new function "cvSaveImageBlob".

  * red_object_tracking.cpp: "cvSaveImageBlob" demo.

  * cvblob.cpp: fixes in "cvRenderBlobs" function.

  * cvtrack.cpp: fixes in "cvRenderTracks" function.

  * cvblob.h: fix problem when using "IPL_DEPTH_LABEL" outside "cvb" namespace.
  Thanks to recastrodiaz.

  * cvcountour.cpp: check size in "cvConvertChainCodesToPolygon" (thanks to
  tengyaogao). New function: cvContourPolygonCircularity.

  * test.cpp: clear image before render. Thanks to tengyaogao.

  * test_random.cpp: fixed portability issues and other minor changes.

  * CMakeLists.cmake, cvBlob/CMakeLists: compile dynamic library. Deleted
  "FindOpenCV.cmake".

Version 0.10.2 (2010/06/07)

  * cvblob.cpp, cvblob.h: new function "cvFilterByLabel".

  * cvcontour.cpp, cvblob.h: new function: cvContourChainCodePerimeter. Thanks
  to meonimarco.

  * cvlabel.cpp: fixed wrong background in cvFilterLabels. Thanks to
  mathias.ferraton.

  * cvblob.cpp, ...: fixed some compilation warnings.

  * cvcontour.cpp: some asserts deleted and/or fixed.

  * test_random.cpp: test improved.

Version 0.10.1 (2010/04/19)

  * cvcontour.cpp: "cvWriteContourPolygonCSV" function.

  * cvblob.h: new function cvReleaseBlob. Fixed memory leak in
  "cvReleaseBlobs".
  
  * cvblob.cpp: Fixed memory leak in "cvFilterByArea".

Version 0.10.0 (2010/03/18)

  * cvlabel.cpp: new labeling algorithm.

  * cvcontour.cpp: "cvGetContour" function deleted (this functionality is
  doing now by "cvLabel").

  * cvcolor.cpp: new file. Function: "cvBlobMeanColor".
